<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/customLightPurple"
        android:orientation="vertical"
        android:weightSum="3"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1.85">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:shadowColor="#9A131313"
                android:shadowDy="15"
                android:shadowRadius="30"
                android:text="@string/titleName"
                android:textAlignment="center"
                android:textColor="@color/customDarkBlack"
                android:fontFamily="sans-serif"
                android:textFontWeight="600"
                android:textSize="48sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/ic_launcher_foreground"/>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/customLightWhite"
            android:weightSum="3"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:stretchColumns="1"
                android:weightSum="1.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="bottom"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginTop="15dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/usernameTitle"
                        android:textColor="@color/customLightGray"
                        android:textFontWeight="800"
                        android:textSize="12dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="10dp"
                        android:text="@string/testUsername"
                        android:textSize="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="top"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginTop="15dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/passwordTitle"
                        android:textColor="@color/customLightGray"
                        android:textFontWeight="800"
                        android:textSize="12dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="10dp"
                        android:text="@string/testPassword"
                        android:textSize="16dp" />

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif"
                    android:textFontWeight="800"
                    android:background="@color/customMediumYellow"
                    android:text="@string/loginText"
                    android:textColor="@color/customDarkBlack"
                    android:textSize="14sp" />

            </LinearLayout>



        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.15">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textFontWeight="800"
                android:text="@string/createAccount"
                android:textColor="@color/customDarkPurple"
                android:textAllCaps="false"
                android:background="@color/customLightPurple"
                android:textSize="12sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textFontWeight="800"
                android:text="@string/needHelp"
                android:textColor="@color/customDarkPurple"
                android:textAllCaps="false"
                android:background="@color/customLightPurple"
                android:textSize="12sp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
